<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".delivery_requests.DeliveryRequestDetailsActivity">

    <!-- Appbar -->
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Toolbar -->
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="1.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                android:id="@+id/card_delivery_request"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="1dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.constraint.Guideline
                        android:id="@+id/guideline_customer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginLeft="24dp"
                        android:orientation="vertical"
                        app:layout_constraintGuide_begin="24dp"
                        app:layout_constraintStart_toStartOf="parent" />

                    <ImageView
                        android:id="@+id/image_request"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:contentDescription="@string/icon_delivery_request"
                        app:srcCompat="@drawable/ic_notifications_black_24dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/label_request_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/delivery_request_id"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        app:layout_constraintStart_toStartOf="@+id/txt_request_id"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/txt_request_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:text="@string/delivery_request_id"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        app:layout_constraintStart_toStartOf="@+id/guideline_customer"
                        app:layout_constraintTop_toBottomOf="@+id/label_request_id" />

                    <View
                        android:id="@+id/view_divider_customer"
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:background="@color/colorPrimary"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txt_request_id" />

                    <TextView
                        android:id="@+id/label_delivery_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/delivery_time"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        app:layout_constraintStart_toStartOf="@+id/guideline_customer"
                        app:layout_constraintTop_toBottomOf="@+id/view_divider_customer" />

                    <TextView
                        android:id="@+id/txt_delivery_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/delivery_time"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        app:layout_constraintStart_toStartOf="@+id/label_delivery_time"
                        app:layout_constraintTop_toBottomOf="@+id/label_delivery_time" />

                    <TextView
                        android:id="@+id/label_delivery_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginLeft="24dp"
                        android:text="@string/delivery_date"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        app:layout_constraintStart_toEndOf="@+id/label_delivery_time"
                        app:layout_constraintTop_toTopOf="@+id/label_delivery_time" />

                    <TextView
                        android:id="@+id/txt_delivery_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/delivery_date"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        app:layout_constraintStart_toStartOf="@+id/label_delivery_date"
                        app:layout_constraintTop_toBottomOf="@+id/label_delivery_date" />

                    <TextView
                        android:id="@+id/label_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/delivery_address"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        app:layout_constraintStart_toStartOf="@+id/txt_delivery_time"
                        app:layout_constraintTop_toBottomOf="@+id/txt_delivery_time" />

                    <TextView
                        android:id="@+id/txt_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/delivery_address"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        app:layout_constraintStart_toStartOf="@+id/label_address"
                        app:layout_constraintTop_toBottomOf="@+id/label_address" />

                    <TextView
                        android:id="@+id/label_notes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/notes"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        app:layout_constraintStart_toStartOf="@+id/txt_address"
                        app:layout_constraintTop_toBottomOf="@+id/txt_address" />

                    <TextView
                        android:id="@+id/txt_notes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="@string/notes"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/label_notes"
                        app:layout_constraintTop_toBottomOf="@+id/label_notes" />

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_customer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="1dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_delivery_request">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.constraint.Guideline
                        android:id="@+id/guideline_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_begin="24dp"
                        app:layout_constraintStart_toStartOf="parent" />

                    <ImageView
                        android:id="@+id/image_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:contentDescription="@string/icon_customer"
                        app:srcCompat="@drawable/ic_assignment_turned_in_black_24dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/label_customer_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/name_label"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        app:layout_constraintStart_toStartOf="@+id/txt_customer_name"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/txt_customer_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_label"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        app:layout_constraintStart_toStartOf="@+id/guideline_content"
                        app:layout_constraintTop_toBottomOf="@+id/label_customer_name" />

                    <TextView
                        android:id="@+id/label_customer_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/phone_label"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        app:layout_constraintStart_toStartOf="@+id/txt_customer_name"
                        app:layout_constraintTop_toBottomOf="@+id/txt_customer_name" />

                    <TextView
                        android:id="@+id/txt_customer_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="@string/phone_label"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/label_customer_phone"
                        app:layout_constraintTop_toBottomOf="@+id/label_customer_phone" />

                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:id="@+id/card_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="1dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_customer"
                tools:layout_editor_absoluteY="380dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.constraint.Guideline
                        android:id="@+id/guideline_state"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_begin="24dp" />

                    <ImageView
                        android:id="@+id/image_history"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:contentDescription="@string/icon_history"
                        app:srcCompat="@drawable/ic_assignment_black_24dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/label_state_history"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/request_history"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        app:layout_constraintStart_toStartOf="@+id/txt_state_history"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/txt_state_history"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="@string/request_history"
                        android:backgroundTint="@color/colorPrimary"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        app:autoSizeTextType="uniform"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHorizontal_chainStyle="spread_inside"
                        app:layout_constraintStart_toStartOf="@+id/guideline_state"
                        app:layout_constraintTop_toBottomOf="@+id/label_state_history" />

                    <Button
                        android:id="@+id/btn_next_state"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:backgroundTint="@color/colorPrimary"
                        android:text="@string/button_history"
                        android:textSize="12sp"
                        app:autoSizeTextType="uniform"
                        app:layout_constraintBottom_toBottomOf="@+id/txt_state_history"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/txt_state_history"
                        app:layout_constraintTop_toTopOf="@+id/txt_state_history" />

                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.constraint.ConstraintLayout>