<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_order"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="8dp"
    card_view:cardPreventCornerOverlap="true"
    card_view:cardUseCompatPadding="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/txt_delivery_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:padding="8dp"
            android:text="@string/time"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Display2"
            android:textColor="@color/textPrimary"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/label_delivery_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_marginBottom="32dp"
            android:padding="4dp"
            android:text="@string/delivery_time"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            card_view:layout_constraintEnd_toEndOf="@+id/txt_delivery_time"
            card_view:layout_constraintStart_toStartOf="@+id/txt_delivery_time"
            card_view:layout_constraintTop_toBottomOf="@+id/txt_delivery_time" />

        <TextView
            android:id="@+id/label_delivery_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:text="@string/delivery_date"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            card_view:layout_constraintStart_toEndOf="@+id/txt_delivery_time"
            card_view:layout_constraintTop_toTopOf="@+id/txt_delivery_time" />

        <TextView
            android:id="@+id/txt_delivery_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery_date"
            card_view:layout_constraintStart_toStartOf="@+id/label_delivery_date"
            card_view:layout_constraintTop_toBottomOf="@+id/label_delivery_date" />

        <TextView
            android:id="@+id/label_customer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:text="Customer Name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            card_view:layout_constraintStart_toEndOf="@+id/label_delivery_date"
            card_view:layout_constraintTop_toTopOf="@+id/label_delivery_date" />

        <TextView
            android:id="@+id/txt_customer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Customer Name"
            card_view:layout_constraintStart_toStartOf="@+id/label_customer_name"
            card_view:layout_constraintTop_toBottomOf="@+id/label_customer_name" />

        <TextView
            android:id="@+id/label_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="Delivery Address"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            card_view:layout_constraintStart_toStartOf="@+id/txt_delivery_address"
            card_view:layout_constraintTop_toBottomOf="@+id/txt_delivery_address" />

        <TextView
            android:id="@+id/txt_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delivery Address"
            card_view:layout_constraintStart_toStartOf="@+id/label_address"
            card_view:layout_constraintTop_toBottomOf="@+id/label_address" />

        <TextView
            android:id="@+id/label_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:text="State"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            card_view:layout_constraintStart_toEndOf="@+id/label_address"
            card_view:layout_constraintTop_toTopOf="@+id/label_address" />

        <TextView
            android:id="@+id/txt_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="State"
            card_view:layout_constraintStart_toStartOf="@+id/label_state"
            card_view:layout_constraintTop_toBottomOf="@+id/label_state" />


    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>